@@ -1,8 +1,8 @@
 # --
 # Kernel/Modules/AdminQueue.pm - to add/update/delete queues
-# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
+# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
 # --
-# $Id: AdminQueue.pm,v 1.43.2.1 2008/11/16 18:17:38 martin Exp $
+# $Id: AdminQueue.pm,v 1.43.2.2 2009/02/09 11:34:25 tr Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -21,7 +21,7 @@ use Kernel::System::Signature;
 use Kernel::System::SystemAddress;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.43.2.1 $) [1];
+$VERSION = qw($Revision: 1.43.2.2 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -356,6 +356,7 @@ sub _Mask {
         Data => { $Self->{SystemAddressObject}->SystemAddressList( Valid => 1 ), },
         Name => 'SystemAddressID',
         SelectedID => $Param{SystemAddressID},
+        Max => 200,
     );
 
     my %DefaultSignKeyList = ();
